<resources>
    <string name="app_name">JEditor</string>
    <string name="crash_file">Exception in a thread with looper. Crash log is saved to crash-info.log in private files directory.</string>
    <string name="open_crash">Open crash log</string>
    <string name="clear_crash">Clear crash log</string>
    <string name="settings">Settings</string>
    <string name="crash_log">Crash log</string>
    <string name="information">Information</string>
    <string name="exit">Exit</string>
    <string name="crash_clrd">Crash log cleared!\n\nGo back and come after a crash.</string>
    <string name="share">Share</string>
    <string name="about_us">About us</string>
	<string name="search">Search</string>
	<string name="open_file">Open</string>
	<string name="new_file">Create new</string>
	<string name="last">Last</string>
	<string name="next">Next</string>
	<string name="replace">Replace</string>
	<string name="replace_all">Replace All</string>
	<string name="text_to_search">Text to search</string>
	<string name="replacement">Replacement</string>
	<string name="action_mode">Action Mode</string>
	<string name="panel_mode">Panel Mode</string>
    <string name="save">Save</string>
	<string name="close_file">Close file</string>
	<string name="format">Format</string>
	<string name="run">Run</string>
</resources>