<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/settings"
        android:name="@string/settings"
        android:icon="@drawable/cog"
        android:title="@string/settings"
		app:contentDescription="@string/settings"
		app:showAsAction="never"/>
          
    <item
        android:icon="@drawable/script_text"
        android:title="@string/crash_log"
		app:contentDescription="@string/crash_log"
		app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/open_crash_log"
                android:name="@string/open_crash"
                android:icon="@drawable/file_export"
                android:title="@string/open_crash"
                app:showAsAction="never"
				app:contentDescription="@string/open_crash"/>
            <item
                android:id="@+id/clear_crash_log"
                android:name="@string/clear_crash"
                android:icon="@drawable/file_remove"
                android:title="@string/clear_crash"
                app:showAsAction="never"
				app:contentDescription="@string/clear_crash"/>
        </menu>
    </item>
	<item android:id="@+id/undo"
          android:title="Undo"
          android:icon="@drawable/undo"
		  app:contentDescription="Undo"
          app:showAsAction="always"/>
          
    <item android:id="@+id/redo"
          android:title="Redo"
          android:icon="@drawable/redo"
		  app:contentDescription="Redo"
          app:showAsAction="always"/>
	<item
		android:id="@+id/search"
		android:name="@string/search"
		android:icon="@drawable/magnify"
		android:title="@string/search"
		app:contentDescription="@string/search"
		app:showAsAction="never">
		<menu>
			<item
				android:id="@+id/search_am"
				android:name="@string/action_mode"
				android:icon="@drawable/dock_bottom"
				android:title="@string/action_mode"
				app:contentDescription="@string/action_mode"
				app:showAsAction="never"/>
			<item
				android:id="@+id/search_pm"
				android:name="@string/panel_mode"
				android:icon="@drawable/card_text"
				android:title="@string/panel_mode"
				android:checkable="true"
				app:contentDescription="@string/panel_mode"
				app:showAsAction="never"/>
		</menu>
	</item>
	<item
		android:id="@+id/run"
		android:name="@string/run"
		android:icon="@drawable/play_outline"
		android:title="@string/run"
		app:contentDescription="@string/run"
		app:showAsAction="always" />
    <item
		android:id="@+id/save"
		android:name="@string/save"
		android:icon="@drawable/content_save"
		android:title="@string/save"
		app:contentDescription="@string/save"
		app:showAsAction="never"/>
	<item
		android:id="@+id/close_file"
		android:name="@string/close_file"
		android:icon="@drawable/close"
		android:title="@string/close_file"
		app:contentDescription="@string/close_file"
		app:showAsAction="never"/>
	<item
		android:id="@+id/open_file"
		android:name="@string/open_file"
		android:icon="@drawable/file_code"
		android:title="@string/open_file"
		app:contentDescription="@string/open_file"
		app:showAsAction="never"/>
	<item
		android:id="@+id/new_file"
		android:name="@string/new_file"
		android:icon="@drawable/file_plus"
		android:title="@string/new_file"
		app:contentDescription="@string/new_file"
		app:showAsAction="never"/>
	<item
		android:id="@+id/format"
		android:name="@string/format"
		android:icon="@drawable/format_align_left"
		android:title="@string/format"
		app:contentDescription="@string/format"
		app:showAsAction="never"/>
    <item
        android:id="@+id/about_us"
        android:name="@string/about_us"
        android:icon="@drawable/information"
        android:title="@string/about_us"
		app:contentDescription="@string/about_us"
		app:showAsAction="never"/>

</menu>
